--- a/OARS.Models/OARS.Models.csproj
+++ b/OARS.Models/OARS.Models.csproj
@@ -56,6 +56,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ArtifactCreate.cs" />
+    <Compile Include="ArtifactDetail.cs" />
+    <Compile Include="ArtifactEdit.cs" />
     <Compile Include="ArtifactListItem.cs" />
     <Compile Include="FeatureListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
