--- a/OnsiteArtifactRecordSupplementMVC/Web.config
+++ b/OnsiteArtifactRecordSupplementMVC/Web.config
@@ -26,6 +26,10 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+    <staticContent>
+      <remove fileExtension=".otf" />
+      <mimeMap fileExtension=".otf" mimeType="font/otf" />
+    </staticContent>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
