--- a/OnsiteArtifactRecordSupplementMVC/OnsiteArtifactRecordSupplementMVC.csproj
+++ b/OnsiteArtifactRecordSupplementMVC/OnsiteArtifactRecordSupplementMVC.csproj
@@ -188,6 +188,7 @@
     <Content Include="Content\Assets\artifactexample.jpg" />
     <Content Include="Content\Assets\Cuneiform.jpg" />
     <Content Include="Content\Assets\featureexample.jpg" />
+    <Content Include="Content\Assets\heiroglyphs.jpg" />
     <Content Include="Content\Assets\indycollage.jpg" />
     <Content Include="Content\Assets\kabri.jpg" />
     <Content Include="Content\Assets\Kabritaketwo.jpg" />
@@ -197,6 +198,7 @@
     <Content Include="Content\Assets\stratigraphy.jpg" />
     <Content Include="Content\Assets\stratigraphytake3.jpg" />
     <Content Include="Content\Assets\stratigraphytaketwo.jpg" />
+    <Content Include="Content\Assets\uxmal.jpg" />
     <Content Include="Content\Assets\winejars.jpg" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
@@ -235,6 +237,7 @@
     <Content Include="Content\Assets\pixel-sagas_adventure\Adventure Subtitles Italic.otf" />
     <Content Include="Content\Assets\pixel-sagas_adventure\Adventure Subtitles.otf" />
     <Content Include="Content\Assets\pixel-sagas_adventure\Adventure.otf" />
+    <None Include="Properties\PublishProfiles\OnsiteArtifactRecordSupplement - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
